@@ -4,6 +4,7 @@
 
 == rufus-lua - 1.1.0    not yet released
 
+- issue     : added State@callbacks array to preserve callback from GC (Scott)
 - issue     : passing tables to ruby functions wrecked arg list. Fixed.
 - todo      : added way to load only a given set of libs when State.new (Scott)
 - todo      : honouring #to_lua when calling Lua functions from Ruby (Scott)
